--- a/_sass/_includes/_social-links.scss
+++ b/_sass/_includes/_social-links.scss
@@ -2,8 +2,8 @@
   border: 1px solid $link-control-border-color;
   border-radius: 20px;
   height: 40px;
-  line-height: 20px;
+  line-height: 42px;
   margin: 0 5px;
-  padding: 10px;
+  text-align: center;
   width: 40px;
 }
